--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 31
 
@@ -40,4 +43,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.koin:koin-androidx-scope:2.1.5"
+    implementation "org.koin:koin-androidx-viewmodel:2.1.5"
+    def room_version = "2.4.1"
+    // Extensions = ViewModel + LiveData
+        implementation "android.arch.lifecycle:extensions:1.1.0"
+        kapt "android.arch.lifecycle:compiler:1.1.0"
+    // Room
+        implementation "android.arch.persistence.room:runtime:1.0.0"
+        kapt "android.arch.persistence.room:compiler:1.0.0"
+    api "androidx.room:room-ktx:$room_version"
+
 }
