--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 apply plugin: 'kotlin-android-extensions'
@@ -47,11 +48,15 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:2.1.5"
     def room_version = "2.4.1"
     // Extensions = ViewModel + LiveData
-        implementation "android.arch.lifecycle:extensions:1.1.0"
-        kapt "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
     // Room
-        implementation "android.arch.persistence.room:runtime:1.0.0"
-        kapt "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
     api "androidx.room:room-ktx:$room_version"
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-database-ktx'
 
 }
