--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,12 @@ dependencies {
     def room_version = "2.4.1"
     // Extensions = ViewModel + LiveData
     implementation "android.arch.lifecycle:extensions:1.1.0"
-    kapt "android.arch.lifecycle:compiler:1.1.0"
-    // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    kapt "android.arch.persistence.room:compiler:1.0.0"
-    api "androidx.room:room-ktx:$room_version"
     implementation 'com.google.code.gson:gson:2.8.2'
+    // Room
+    kapt "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-runtime:$room_version"
+    api "androidx.room:room-ktx:$room_version"
+
 
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-database-ktx'
