--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.koin:koin-androidx-scope:2.1.5"
+    implementation 'com.androidplot:androidplot-core:1.5.7'
     implementation "org.koin:koin-androidx-viewmodel:2.1.5"
     def room_version = "2.4.1"
     // Extensions = ViewModel + LiveData
